--- a/cliente/index.html
+++ b/cliente/index.html
@@ -8,7 +8,7 @@
     <style>
         form{background:rgb(0,0,0,.15); padding: 0.25rem; position: fixed;bottom: 0;left: 0;right: 0;display: flex;height: 3rem;box-sizing: border-box;backdrop-filter: blur(10px);}
         ul {list-style-type: none;margin: 0;padding: 0;}
-        ul > li{padding: 0.5rem 1rem;}
+        ul > li {padding: 0.5rem 1rem;}
         ul > li:nth-child(odd){background: papayawhip;text-align: right;font-style: italic;font-weight: 600;
         }
     </style>
@@ -29,7 +29,7 @@
         let socket = io()
         const form = document.querySelector('form')
         const input = document.querySelector('input')
-        let mensajes =document.querySelector('ul')
+        let mensajes = document.querySelector('ul')
       
         form.addEventListener('submit',(e)=>{
             e.preventDefault()
@@ -40,10 +40,10 @@
         })
 
         socket.on('chat',(msg)=>{
-            document.createElement('li')
+            let item = document.createElement('li')
             item.textContent = msg
-            mensaje.appendChild(item)
-            window.scrollto(0,document.body.scrollHeight)
+            mensajes.appendChild(item)
+            window.scrollto(0 ,document.body.scrollHeight)
         })
     </script>
   </body>
